--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,15 @@ header{
 	width:100%;
 	top:0;
 }
+
+.main-logo img{width:150px;}
+
 nav{margin-top:55px;}
 
 nav ul{
 	display:flex; 
 	justify-content: space-around; 
-	border-bottom:2px solid #ccc; 
+	border-bottom:1px solid #ccc; 
 	padding:10px 0;
 }
 
@@ -34,3 +37,38 @@ nav li{
 }
 
 nav li:last-child{border-right:0px;}
+
+
+h3.section-top{
+	text-transform: uppercase;
+	color:gray;
+	font-weight: 700;
+	font-size:16px;
+}
+h2{font-size:19px; font-weight:700; margin:10px 0;}
+
+.img-heading{position: relative;}
+.img-heading img{max-width:100%;}
+.img-heading span{
+	position:absolute;
+	padding:5px 15px;
+	color:red;
+	background:#eee;
+	bottom:0px;
+	left:0px;
+	font-weight: 700;
+	font-size:14px;
+}
+
+article{padding:15px 0;border-bottom:1px solid #ccc;}
+h3{font-weight:bold; font-size:17px;margin-bottom:0;}
+p{font-size:14px;}
+
+.new-section{
+	margin-top:20px;
+	padding-bottom:15px;
+	border-bottom:1px solid #ccc;
+}
+
+
+
