--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,5 @@
 /* CSS here */
-
-body{}
-
-/*.row > div{min-height:10vh; border:1px solid red;}*/
-
 header{
-	text-align: center; 
 	position:relative; 
 	z-index:2;
 }
@@ -17,9 +11,24 @@ header{
 	top:0;
 }
 
-.main-logo img{width:150px;}
+.main-logo img{width:170px; padding-left:25px;}
+.main-logo i{
+	display:none;
+	
+    font-size: 24px;
+    color: white;
+    cursor:pointer;
+}
+.main-logo .right{
+	position: absolute;
+    right: 20px;
+    top: 14px;
+}
 
-nav{margin-top:55px;}
+nav{
+	margin-top:55px;
+	text-align: center; 
+}
 
 nav ul{
 	display:flex; 
@@ -161,4 +170,33 @@ h3.red{color:red; margin-top:20px;}
 	font-weight: bold;
 	text-transform: uppercase;
 }
+.social{text-align: right;}
+.social i{font-size:28px; color:gray; margin:0 5px;}
 
+footer{border-top:1px solid #ccc; margin-top:25px;}
+footer img{max-width:200px;}
+
+.f-brand span{vertical-align: bottom; color:gray; font-size:14px;}
+
+footer .row{padding:20px 0;}
+footer .row:last-child{
+	border-top:1px solid #ccc;
+	
+}
+
+footer li{display:inline-block; color:gray;margin:0 5px; font-size:14px;}
+footer ul li:after{
+	content:" | ";
+	padding-left:15px;
+}
+footer ul li:last-child:after{
+	content:"";
+}
+
+@media screen and (max-width: 720px) {
+	.social{text-align: left; margin-top:20px;}
+	nav{display:none;}
+	main{margin-top:60px;}
+	.main-logo img{width:150px; padding-left:0px;}
+	.main-logo i{display:inline-block;}
+}
